objects/BX041_IP_Merge__c.object
<CustomObject>
    <fields>
        <fullName>BX_041__c</fullName>
        <label>BX-041</label>
        <referenceTo>BX_041__c</referenceTo>
        <relationshipName>BX_041_IP_Merges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GF_Supported_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GLOBALFOUNDRIES Supported IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Category__c</fullName>
        <formula>IP_Master__r.IP_Type_Category_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Description__c</fullName>
        <formula>IP_Master__r.Description__c</formula>
        <label>IP Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IP Merge</label>
        <referenceTo>IP_Merge__c</referenceTo>
        <relationshipName>BX_041_IP_Merges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <formula>IP_Master__r.IP_Type__c</formula>
        <label>IP Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Vendor__c</fullName>
        <formula>IP_Master__r.IP_Vendor__c</formula>
        <label>IP Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Kit_Name__c</fullName>
        <label>Merge Kit Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CDRS IP Merge</label>
    <nameField>
        <displayFormat>CDRSIPM-{00000}</displayFormat>
        <label>IP Merge Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CDRS IP Merges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>